{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 1151,
  "lineage": "98de9673-7c2d-bd2f-66d4-c6a4302eb72f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-15T02:27:38.650-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.0.1.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-at-edge-442215/global/firewalls/allow-internal-egress",
            "log_config": [],
            "name": "allow-internal-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
            "priority": 1000,
            "project": "ai-at-edge-442215",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/firewalls/allow-internal-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-15T02:27:38.938-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-at-edge-442215/global/firewalls/allow-internal-traffic",
            "log_config": [],
            "name": "allow-internal-traffic",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
            "priority": 1000,
            "project": "ai-at-edge-442215",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/firewalls/allow-internal-traffic",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-15T02:27:38.874-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ai-at-edge-442215/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
            "priority": 1000,
            "project": "ai-at-edge-442215",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/images/simone-image-6",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 75,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/disks/registry"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ai-at-edge-442215/zones/europe-west3-b/instances/registry",
            "instance_id": "172492078723574988",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-8",
            "metadata": {
              "ssh-keys": "customuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDUpzmPJ1MQkcfSs6i5RuO5+BR3lPRtky2y+H+zzKX9zgLqq1w+VSIw8aoXW0UmtN1vkD0zbawt8NNbH6p+2kTiuqRhGEmp0wOcchjnt/VPVikOpMUq0s3/Qqjp+qt7/VXTme28Mpa5UgqImL+cJH9eEO8GYr3hfhIPl2sISpSJVbUTa+/KoPcKs2nHPond0B49zANM+WdwRtS5DASyTur0UsUeQLfG/sfnnGf3sr+EqYud05NfyaZ4kkRxJC8KMBcltZfLtMpqpu7/M82DveK4eL7dW2iWPhtR7rfw84FI3xnQDNbGn10FmsBeYEA5ZXYS7laScqiCjliy1arJf+tE/wqpP24KtNHc7ZTH9UzP0idCoXkTZIh4s3YzA5DJk0NZJis/9WMoP7NxETGzBZqyBEON1QIHldWZWo6lFC [...]
            },
            "metadata_fingerprint": "yVuKOHv94PM=",
            "name": "registry",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.164.128",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
                "network_ip": "10.0.1.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
                "subnetwork_project": "ai-at-edge-442215"
              }
            ],
            "project": "ai-at-edge-442215",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/instances/registry",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc",
            "google_compute_subnetwork.main_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/images/simone-image-6",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 75,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/disks/optimizer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ai-at-edge-442215/zones/europe-west3-b/instances/optimizer",
            "instance_id": "593867579217620171",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-8",
            "metadata": {
              "ssh-keys": "customuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDUpzmPJ1MQkcfSs6i5RuO5+BR3lPRtky2y+H+zzKX9zgLqq1w+VSIw8aoXW0UmtN1vkD0zbawt8NNbH6p+2kTiuqRhGEmp0wOcchjnt/VPVikOpMUq0s3/Qqjp+qt7/VXTme28Mpa5UgqImL+cJH9eEO8GYr3hfhIPl2sISpSJVbUTa+/KoPcKs2nHPond0B49zANM+WdwRtS5DASyTur0UsUeQLfG/sfnnGf3sr+EqYud05NfyaZ4kkRxJC8KMBcltZfLtMpqpu7/M82DveK4eL7dW2iWPhtR7rfw84FI3xnQDNbGn10FmsBeYEA5ZXYS7laScqiCjliy1arJf+tE/wqpP24KtNHc7ZTH9UzP0idCoXkTZIh4s3YzA5DJk0NZJis/9WMoP7NxETGzBZqyBEON1QIHldWZWo6lFC [...]
            },
            "metadata_fingerprint": "yVuKOHv94PM=",
            "name": "optimizer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.40.86.123",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
                "network_ip": "10.0.1.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
                "subnetwork_project": "ai-at-edge-442215"
              }
            ],
            "project": "ai-at-edge-442215",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/instances/optimizer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc",
            "google_compute_subnetwork.main_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/images/simone-image-6",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 75,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/disks/model-manager"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/acceleratorTypes/nvidia-tesla-t4"
              }
            ],
            "id": "projects/ai-at-edge-442215/zones/europe-west3-b/instances/model-manager",
            "instance_id": "7555687628170013900",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-8",
            "metadata": {
              "ssh-keys": "customuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDUpzmPJ1MQkcfSs6i5RuO5+BR3lPRtky2y+H+zzKX9zgLqq1w+VSIw8aoXW0UmtN1vkD0zbawt8NNbH6p+2kTiuqRhGEmp0wOcchjnt/VPVikOpMUq0s3/Qqjp+qt7/VXTme28Mpa5UgqImL+cJH9eEO8GYr3hfhIPl2sISpSJVbUTa+/KoPcKs2nHPond0B49zANM+WdwRtS5DASyTur0UsUeQLfG/sfnnGf3sr+EqYud05NfyaZ4kkRxJC8KMBcltZfLtMpqpu7/M82DveK4eL7dW2iWPhtR7rfw84FI3xnQDNbGn10FmsBeYEA5ZXYS7laScqiCjliy1arJf+tE/wqpP24KtNHc7ZTH9UzP0idCoXkTZIh4s3YzA5DJk0NZJis/9WMoP7NxETGzBZqyBEON1QIHldWZWo6lFC [...]
            },
            "metadata_fingerprint": "yVuKOHv94PM=",
            "name": "model-manager",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.40.121.161",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
                "network_ip": "10.0.1.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
                "subnetwork_project": "ai-at-edge-442215"
              }
            ],
            "project": "ai-at-edge-442215",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/instances/model-manager",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc",
            "google_compute_subnetwork.main_subnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/images/simone-image-6",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 75,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/disks/deployer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ai-at-edge-442215/zones/europe-west3-b/instances/deployer",
            "instance_id": "9096284189562711245",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-8",
            "metadata": {
              "ssh-keys": "customuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDUpzmPJ1MQkcfSs6i5RuO5+BR3lPRtky2y+H+zzKX9zgLqq1w+VSIw8aoXW0UmtN1vkD0zbawt8NNbH6p+2kTiuqRhGEmp0wOcchjnt/VPVikOpMUq0s3/Qqjp+qt7/VXTme28Mpa5UgqImL+cJH9eEO8GYr3hfhIPl2sISpSJVbUTa+/KoPcKs2nHPond0B49zANM+WdwRtS5DASyTur0UsUeQLfG/sfnnGf3sr+EqYud05NfyaZ4kkRxJC8KMBcltZfLtMpqpu7/M82DveK4eL7dW2iWPhtR7rfw84FI3xnQDNbGn10FmsBeYEA5ZXYS7laScqiCjliy1arJf+tE/wqpP24KtNHc7ZTH9UzP0idCoXkTZIh4s3YzA5DJk0NZJis/9WMoP7NxETGzBZqyBEON1QIHldWZWo6lFC [...]
            },
            "metadata_fingerprint": "yVuKOHv94PM=",
            "name": "deployer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.34.176",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
                "network_ip": "10.0.1.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
                "subnetwork_project": "ai-at-edge-442215"
              }
            ],
            "project": "ai-at-edge-442215",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/instances/deployer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc",
            "google_compute_subnetwork.main_subnet"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/images/simone-image-6",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 75,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/disks/device"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ai-at-edge-442215/zones/europe-west3-b/instances/device",
            "instance_id": "4031069682174995659",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-8",
            "metadata": {
              "ssh-keys": "customuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDUpzmPJ1MQkcfSs6i5RuO5+BR3lPRtky2y+H+zzKX9zgLqq1w+VSIw8aoXW0UmtN1vkD0zbawt8NNbH6p+2kTiuqRhGEmp0wOcchjnt/VPVikOpMUq0s3/Qqjp+qt7/VXTme28Mpa5UgqImL+cJH9eEO8GYr3hfhIPl2sISpSJVbUTa+/KoPcKs2nHPond0B49zANM+WdwRtS5DASyTur0UsUeQLfG/sfnnGf3sr+EqYud05NfyaZ4kkRxJC8KMBcltZfLtMpqpu7/M82DveK4eL7dW2iWPhtR7rfw84FI3xnQDNbGn10FmsBeYEA5ZXYS7laScqiCjliy1arJf+tE/wqpP24KtNHc7ZTH9UzP0idCoXkTZIh4s3YzA5DJk0NZJis/9WMoP7NxETGzBZqyBEON1QIHldWZWo6lFC [...]
            },
            "metadata_fingerprint": "yVuKOHv94PM=",
            "name": "device",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.32.204",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
                "network_ip": "10.0.1.15",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
                "subnetwork_project": "ai-at-edge-442215"
              }
            ],
            "project": "ai-at-edge-442215",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/instances/device",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc",
            "google_compute_subnetwork.main_subnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/images/simone-image-6",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 75,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/disks/server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ai-at-edge-442215/zones/europe-west3-b/instances/server-1",
            "instance_id": "109194603061783755",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-8",
            "metadata": {
              "ssh-keys": "customuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDUpzmPJ1MQkcfSs6i5RuO5+BR3lPRtky2y+H+zzKX9zgLqq1w+VSIw8aoXW0UmtN1vkD0zbawt8NNbH6p+2kTiuqRhGEmp0wOcchjnt/VPVikOpMUq0s3/Qqjp+qt7/VXTme28Mpa5UgqImL+cJH9eEO8GYr3hfhIPl2sISpSJVbUTa+/KoPcKs2nHPond0B49zANM+WdwRtS5DASyTur0UsUeQLfG/sfnnGf3sr+EqYud05NfyaZ4kkRxJC8KMBcltZfLtMpqpu7/M82DveK4eL7dW2iWPhtR7rfw84FI3xnQDNbGn10FmsBeYEA5ZXYS7laScqiCjliy1arJf+tE/wqpP24KtNHc7ZTH9UzP0idCoXkTZIh4s3YzA5DJk0NZJis/9WMoP7NxETGzBZqyBEON1QIHldWZWo6lFC [...]
            },
            "metadata_fingerprint": "yVuKOHv94PM=",
            "name": "server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.40.125.120",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
                "network_ip": "10.0.1.16",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
                "subnetwork_project": "ai-at-edge-442215"
              }
            ],
            "project": "ai-at-edge-442215",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/instances/server-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc",
            "google_compute_subnetwork.main_subnet"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/images/simone-image-6",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 75,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/disks/server-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/ai-at-edge-442215/zones/europe-west3-b/instances/server-2",
            "instance_id": "8561436026770500812",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n2-standard-8",
            "metadata": {
              "ssh-keys": "customuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDUpzmPJ1MQkcfSs6i5RuO5+BR3lPRtky2y+H+zzKX9zgLqq1w+VSIw8aoXW0UmtN1vkD0zbawt8NNbH6p+2kTiuqRhGEmp0wOcchjnt/VPVikOpMUq0s3/Qqjp+qt7/VXTme28Mpa5UgqImL+cJH9eEO8GYr3hfhIPl2sISpSJVbUTa+/KoPcKs2nHPond0B49zANM+WdwRtS5DASyTur0UsUeQLfG/sfnnGf3sr+EqYud05NfyaZ4kkRxJC8KMBcltZfLtMpqpu7/M82DveK4eL7dW2iWPhtR7rfw84FI3xnQDNbGn10FmsBeYEA5ZXYS7laScqiCjliy1arJf+tE/wqpP24KtNHc7ZTH9UzP0idCoXkTZIh4s3YzA5DJk0NZJis/9WMoP7NxETGzBZqyBEON1QIHldWZWo6lFC [...]
            },
            "metadata_fingerprint": "yVuKOHv94PM=",
            "name": "server-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.170.82",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
                "network_ip": "10.0.1.17",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
                "subnetwork_project": "ai-at-edge-442215"
              }
            ],
            "project": "ai-at-edge-442215",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/zones/europe-west3-b/instances/server-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc",
            "google_compute_subnetwork.main_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ai-at-edge-442215/global/networks/main-vpc",
            "mtu": 0,
            "name": "main-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8387646677718347537",
            "project": "ai-at-edge-442215",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-15T02:27:39.380-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "main-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/global/networks/main-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ai-at-edge-442215",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ai-at-edge-442215/regions/europe-west3/subnetworks/main-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_vpc"
          ]
        }
      ]
    }
  ]
}